--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "homepage": "https://jarOfSand.github.io/react-gh-pages",
   "private": true,
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.18",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.2",
@@ -15,6 +16,7 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-scripts": "5.0.1",
+    "tailwindcss": "^4.1.18",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
