--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
+    "chance": "^1.1.13",
     "mobx-react": "^9.2.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
