--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "chance": "^1.1.13",
+    "lodash": "^4.17.23",
     "mobx-react": "^9.2.1",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
